[options]
install_requires =
    logzero
    dill
    numpy==1.23.*
    scipy>=1.10
    pandas>=1.5
    matplotlib>=3.5.2
    scikit-learn>=1.2

[options.extras_require]
tensorflow =
    tensorflow>=2.7,<=2.10
    scikeras>=0.10
    tensorflow-addons
pytorch =
    torch>=1.12.0
    skorch>=0.12
river =
    river==0.14.*
ray =
    ray>=2.2
    hyperopt
    tune_sklearn
dev =
    black
    pylint
tests = 
    pytest
    nbmake
    pytest-xdist
    pytest-console-scripts
examples = 
    ipykernel
    plotly
    nbformat
    seaborn
    gdown
    liac-arff
all =
    sail[tensorflow]
    sail[pytorch]
    sail[river]
    sail[ray]
    sail[dev]
    sail[examples]
    sail[tests]