[options]
install_requires =
    logzero
    dill 
    tqdm
    numpy>=1.23
    scipy>=1.10
    pandas>=2.0
    matplotlib>=3.5.2
    scikit-learn>=1.2

[options.extras_require]
tensorflow =
    tensorflow>=2.7,<=2.13
    scikeras
    tensorflow-addons
tfarm64 =
    tensorflow-macos>=2.7,<=2.13
    scikeras
    tensorflow-addons
pytorch =
    torch>=2.0
    skorch
river =
    river==0.18.*
ray =
    ray>=2.5
    hyperopt
    tune_sklearn
dev =
    black
    pylint
tests = 
    pytest
    nbmake
    pytest-xdist
    pytest-console-scripts
examples = 
    ipykernel
    plotly
    nbformat
    seaborn
    gdown
    liac-arff
all =
    sail[tensorflow]
    sail[pytorch]
    sail[river]
    sail[ray]
    sail[dev]
    sail[examples]
    sail[tests]
all_arm64 =
    sail[tfarm64]
    sail[pytorch]
    sail[river]
    sail[ray]
    sail[dev]
    sail[examples]
    sail[tests]