[options]
install_requires =
    logzero
    dill 
    tqdm
    seaborn==0.12.2
    numpy>=1.23
    scipy>=1.10
    pandas>=2.0
    opentelemetry-api
    opentelemetry-sdk
    opentelemetry-exporter-otlp
    tensorboard>=2.11
    matplotlib==3.7.2
    scikit-learn>=1.2,<=1.3.2

[options.extras_require]
tensorflow_cpu =
    tensorflow-cpu>=2.7,<=2.13
    scikeras
    tensorflow-addons
tensorflow =
    tensorflow>=2.7,<=2.13
    scikeras
    tensorflow-addons
tensorflow_arm64 =
    tensorflow-macos>=2.7,<=2.13
    scikeras
    tensorflow-addons
pytorch =
    torch>=2.0
    skorch
river =
    river==0.18.*
ray =
    ray>=2.5,<=2.6.3
    hyperopt
    tune_sklearn
dev =
    black
    pylint
tests = 
    pytest
    nbmake
    pytest-xdist
    pytest-console-scripts
examples =
    ipykernel
    plotly
    nbformat
    gdown
    liac-arff
all =
    sail[tensorflow]
    sail[pytorch]
    sail[river]
    sail[ray]
    sail[dev]
    sail[examples]
    sail[tests]
